# rustnews

./: .gitignore  Cargo.toml
src/: components.rs  db.rs  lib.rs  main.rs
static/: tailwind.css
