[package]
name = "tendytime"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
enum_router = { git = "https://github.com/swlkr/enum_router", version = "0.1.0" }
hyped = "0.1.0"
rizz = { version = "0.1.0", path = "../rizz" }
serde = { version = "1.0.195", features = ["derive"] }
static_stash = { git = "https://github.com/swlkr/static_stash", version = "0.1.0" }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
